fix z-index

--- a/src/stylesheets/popup.css
+++ b/src/stylesheets/popup.css
@@ -14,7 +14,7 @@
     background-color: transparent;
 
     transition: background-color .45s ease-in-out;
-    z-index: 7;
+    z-index: 1000;
 }
 
 .popup-container:not(.visible) {
